--- a/src/public/sass/input.scss
+++ b/src/public/sass/input.scss
@@ -58,31 +58,32 @@ body {
 }
 
 .image-container {
-  max-width: 779px;
   margin: 0 auto;
 }
 
 .image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   background: lightblue;
   text-align: center;
   border: 1px solid $gunmetalGray;
   margin: 0 auto;
-  max-width: 760px;
-  padding: 0 0 130%;
-  position: relative;
+  max-width: 700px;
+  min-height: 1024px;
 }
 
 .image-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   max-width: 100%;
   max-height: 100%; 
-  margin: 0 auto;
 }
 
 .wrapper {
   max-width: 75%;
+}
+
+@media only screen and (max-width: 600px) {
+  #left-button-container, #right-button-container {
+    display: none;
+  }
 }
